add metrics endpoint, add tests for server
