# docs/swagger.json
@@ -119,6 +119,26 @@
                 }
             }
         },
+        "/metrics": {
+            "get": {
+                "description": "Returns basic metrics about the server",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "metrics"
+                ],
+                "summary": "Basic metrics endpoint",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.metricsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Check if the server is ready to accept requests",
@@ -139,6 +159,22 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "controller.metricsResponse": {
+            "type": "object",
+            "properties": {
+                "activeContexts": {
+                    "type": "integer"
+                },
+                "activePages": {
+                    "type": "integer"
+                },
+                "isConnected": {
+                    "type": "boolean"
                 }
             }
         }
